--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
       version    : 'v2.8'
     });
     FB.AppEvents.logPageView();
+    FB.getLoginStatus(function(response) {
+      if (response.authResponse == null) {
+        FB.login(function(response) {
+          if (response.status === 'connected') {
+            // Logged into your app and Facebook.
+            console.log("token=", response.authResponse.accessToken);
+          } else if (response.status === 'not_authorized') {
+            // The person is logged into Facebook, but not your app.
+            console.log("not authorized");
+          } else {
+            // The person is not logged into Facebook, so we're not sure if
+            // they are logged into this app or not.
+            console.log("not logged in");
+          }          
+        });
+      }
+    });
   };
   (function(d, s, id){
      var js, fjs = d.getElementsByTagName(s)[0];
