--- a/index.html
+++ b/index.html
@@ -39,3 +39,6 @@
   data-width="450"
   data-show-faces="true">
 </div>
+
+<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+</fb:login-button>
