--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <link rel="stylesheet" href="styles.css">
 
-<script type="javascript/text" src="fb.js"></script>
+<script type="text/javascript" src="fb.js"></script>
 
 <div
   class="fb-like"
