--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head><meta charset="utf-8" /></head>
 
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" type="text/css" href="styles.css">
 
 <script type="text/javascript" src="fb.js"></script>
 
