--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
 		Esta aplicación permite mostrar los beneficios que el mecanismo de <i>Social Login</i> puede ofrecer a su empresa, a través del enriquecimiento de datos y su procesamiento posterior, en la modalidad que denominamos <i>"Agnostic as a Service"</i>
 		</div>	
 	</div>
-	<br>
-	<div id="box2" class="fadein2">
+	<div id="box2" class="fadein2" style="margin-top: 10px">
 		<div class="innertext">
 		En la aplicación mobile o sitio web de su empresa se puede incorporar un mecanismo de autenticación integrado, por ejemplo, a <span style="color: blue; font-weight: bold;">Facebook</span>
 		<div style="text-align: right;">
 			<span style="font-size: 14px;">Haga click aquí</span>&nbsp;&nbsp;&rarr;&nbsp;&nbsp;
-      <fb:login-button scope="public_profile,email" autologoutlink="true" onlogin="checkLoginState();">
-      </fb:login-button>
+                        <fb:login-button scope="public_profile,email" autologoutlink="true" onlogin="checkLoginState();">
+                        </fb:login-button>
+		<div id="status"></div>
 		</div>
 		</div>	
 	</div>
+	<div id="box3" class="hidden" style="margin-top: 10px">
+	</div>
 </div>
 
-<div id="status">
-</div>
