--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<span style="font-size: 14px;">Haga click aquí</span>&nbsp;&nbsp;&rarr;&nbsp;&nbsp;
                         <fb:login-button scope="public_profile,email" autologoutlink="true" onlogin="checkLoginState();">
                         </fb:login-button>
-		<div id="status"></div>
+		<div id="status" class="hidden"></div>
 		</div>
 		</div>	
 	</div>
