--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		En la aplicación mobile o sitio web de su empresa se puede incorporar un mecanismo de autenticación integrado, por ejemplo, a <span style="color: blue; font-weight: bold;">Facebook</span>
 		<div style="text-align: right;">
 			<span style="font-size: 14px;">Haga click aquí</span>&nbsp;&nbsp;&rarr;&nbsp;&nbsp;
-                        <fb:login-button scope="public_profile,email" autologoutlink="true" onlogin="checkLoginState();">
+                        <fb:login-button scope="public_profile,email,user_likes,user_location" autologoutlink="true" onlogin="checkLoginState();">
                         </fb:login-button>
 		<div id="status" class="hidden"></div>
 		</div>
